Step 1 and 2 done

--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-Hello world
-Hello Erik 
+<HTML>
+
+<header id="header">
+  <title>Product Landing Page</TITLE>
+  <img id="header-img" src="#" alt ="Landing logo">
+</header>
+
+
+</HTML>
