--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <header id="header">
   <title>Product Landing Page</TITLE>
   <img id="header-img" src="#" alt ="Landing logo">
+  <nav id="nav-bar">
+    <a href="" target="_blank" class="nav-link">Features</a>
+    <a href="" target="_blank" class="nav-link">How it Works</a>
+    <a href="" target="_blank" class="nav-link">Pricing</a>
+  </nav>
 </header>
 
 
