Step 6 and 7 done

--- a/index.html
+++ b/index.html
@@ -10,5 +10,17 @@
   </nav>
 </header>
 
+<body>
+  <a href="#" alt="YouTube Video"></a>
+  <video width="500px" height="500px" controls="controls"> 
+  <source src="vid.mp4"  type="video/mp4"> 
+  
+  <form id="form">
+
+  </form>
+
+
+</body>
+
 
 </HTML>
